--- a/index28.html
+++ b/index28.html
@@ -17,6 +17,36 @@
     for (i = 0; i < 5; i++) {
       document.write(arr[i] + "<br>");
     }
+
+    var arr = new Array(100, 200, 300, 400, 500);
+    for (i = 0; i < 5; i++) {
+      document.write(arr[i] + "<br>");
+    }
+
+    document.write("<br> Sorting Bubble Sort <br>");
+    var arr = new Array(9, 8, 15, 3, 6, 7);
+    var i, j, temp;
+
+    document.write("<br> Before sorting <br>");
+
+    for (i = 0; i < arr.length; i++) {
+      document.write(arr[i] + "<br>");
+    }
+    document.write("<br> After sorting <br>");
+
+    for (i = 0; i < arr.length; i++) {
+      for (j = 0; j < arr.length - 1; j++) {
+        if (arr[j] > arr[j + 1]) {
+          temp = arr[j];
+          arr[j] = arr[j + 1];
+          arr[j + 1] = temp;
+        }
+      }
+    }
+
+    for (i = 0; i < arr.length; i++) {
+      document.write(arr[i] + "<br>");
+    }
   </script>
   <body></body>
 </html>
